# localPeregrine

./: .gitignore  CMakeLists.txt  README.md  libLocalPeregrineLib.a 2  main.cc
bluetooth-serial-port/: CMakeLists.txt
bluetooth-serial-port/src/: BInet.hpp
doc/: questions.md  spec_tcp_ip.md  use_cases.md
fs/: CMakeLists.txt
fs/include/: file.hpp  repository.hpp  tracker.hpp
gnutella-c/: CMakeLists.txt
gnutella-c/include/: address.h  error.h  file.h  net.h  peer.h  query_hit.h  sstring.h  string.h  utils.h
gnutella-c/src/: file.c  string.c
gnutella-cpp/: CMakeLists.txt
gnutella-cpp/include/: address.hpp  net.hpp  peer.hpp  query_hit.hpp  utils.hpp
gnutella-cpp/src/: net.c  net.cc  peer.cc  query_hit.cc
logger/include/: ilog.hpp  logger.hpp
net/include/: file.h  list.h  peer.h  query_hit.hpp  type.h  utils.h
network/: CMakeLists.txt
network/include/: network.hpp
network/src/: network.cc
